--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Instagram</title>
     <style>
         body { background-color: #ffffff; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
-        .language-container { margin-top: 20px; color: #8e8e8e; font-size: 13px; display: flex; align-items: center; gap: 4px; cursor: pointer; }
+        .language-container { margin-top: 20px; color: #8e8e8e; font-size: 13px; display: flex; align-items: center; gap: 4px; }
         .main-container { width: 100%; max-width: 350px; padding: 0 40px; box-sizing: border-box; text-align: center; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; }
         .logo-img { width: 75px; height: 75px; margin: 0 auto 40px auto; display: block; }
         input { width: 100%; padding: 14px 16px; margin-bottom: 12px; border: 1px solid #dbdbdb; border-radius: 12px; background-color: #fafafa; box-sizing: border-box; font-size: 14px; outline: none; }
@@ -14,7 +14,7 @@
         .forgot-pw { color: #000000; font-size: 14px; font-weight: 600; text-decoration: none; margin-top: 20px; display: block; }
         .bottom-section { width: 100%; max-width: 350px; padding: 20px 40px 40px 40px; box-sizing: border-box; text-align: center; }
         .btn-signup { width: 100%; background-color: transparent; color: #0064e0; border: 1px solid #0064e0; padding: 11px; border-radius: 50px; font-weight: 600; font-size: 15px; margin-bottom: 25px; cursor: pointer; }
-        /* Meta 한 줄 설정 */
+        /* Meta 한 줄 정렬 설정 */
         .meta-footer { display: flex; align-items: center; justify-content: center; gap: 5px; }
         .meta-icon { width: 18px; filter: grayscale(1); opacity: 0.5; }
         .meta-text { color: #8e8e8e; font-size: 15px; font-weight: 500; }
